opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/async_iterator"
bug-reports: "https://github.com/janestreet/async_iterator/issues"
dev-repo: "git+https://github.com/janestreet/async_iterator.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/async_iterator/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "async"
  "async_rpc_kernel"
  "base"
  "core"
  "core_kernel"
  "maybe_pushback"
  "ppx_jane"
  "rpc_parallel"
  "dune"             {>= "3.11.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "An opinionated asynchronous stream-processing framework"
description: "
Async_iterator provides a suite of tools for building single-process,
multi-process-pipeline, and distributed stream processing applications. It aims to provide
an ergonomic interface, competitive with traditional queue- or pipe-based solutions, while
strongly encouraging good performance and correctness practices, via said interface.

Async_iterator is relied upon by many of the most mission-critical systems at Jane Street.
"
